ui/v2.5/src/components/Shared/styles.scss
/* ... */
/* stylelint-enable */

#date-picker-portal .react-datepicker-popper {
  z-index: 1600;
}

.clearable-input-group {
  align-items: stretch;
  display: flex;
  flex-wrap: wrap;
  position: relative;
}

.clearable-text-field,
.clearable-text-field:active,
.clearable-text-field:focus {
  background-color: $secondary;
  border: 0;
  border-color: $secondary;
  color: #fff;
}

.clearable-text-field-clear {
  background-color: $secondary;
  bottom: 0;
  color: $muted-gray;
  font-size: 0.875rem;
  margin: 0.375rem 0.75rem;
  padding: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 4;

  &:hover,
  &:focus,
  &:active,
  &:not(:disabled):not(.disabled):active,
  &:not(:disabled):not(.disabled):active:focus {
    background-color: $secondary;
    border-color: transparent;
    box-shadow: none;
  }
}

.string-list-row .input-group {
  flex-wrap: nowrap;
}

.stash-id-pill {
  display: inline-block;
  font-size: 90%;
  font-weight: 700;
  line-height: 1;
  padding-bottom: 0.25em;
  padding-top: 0.25em;
  text-align: center;
  vertical-align: baseline;
  white-space: nowrap;

  span,
  a {
    display: inline-block;
    padding: 0.25em 0.6em;
  }

  span {
    background-color: $primary;
    border-radius: 0.25rem 0 0 0.25rem;
    min-width: 5em;
  }

  a {
    background-color: $secondary;
    border-radius: 0 0.25rem 0.25rem 0;
  }
}

.react-select-image-option {
  align-items: baseline;
  display: flex;
}

button.btn.favorite-button {
  opacity: 1;
  transition: opacity 0.5s;

  &.not-favorite {
    color: rgba(191, 204, 214, 0.5);
    filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.9));

    &.hide-not-favorite {
      opacity: 0;
    }
  }

  &.favorite {
    color: #ff7373;
    filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.9));
  }

  &:hover,
  &:active,
  &:focus,
  &:active:focus {
    background: none;
    box-shadow: none;
  }
}

.count-button {
  border-radius: 5px;

  &:hover {
    background: rgba(138, 155, 168, 0.15);
    color: #f5f8fa;
  }

  .count-icon {
    padding-left: 0.5rem;
    padding-right: 0.25rem;
  }

  .count-value {
    padding-left: 0.25rem;
    padding-right: 0.5rem;
  }

  button.count-icon,
  &.increment-only button.count-value {
    &:hover {
      background: none;
      color: #f5f8fa;
    }
  }

  button.btn-secondary.count-icon,
  button.btn-secondary.count-value {
    &:focus {
      border: none;
      box-shadow: none;
      color: #f5f8fa;

      &:not(:hover) {
        background: none;
      }
    }
  }
}

.external-links-button {
  display: inline-block;
}

.scraper-menu .dropdown-menu {
  min-width: 250px;
  padding-top: 0;

  .dropdown-divider {
    border-top-color: $textfield-bg;
    margin: 0;
  }

  .scraper-filter-container {
    background-color: $secondary;
    border-bottom: solid 1px $textfield-bg;
    padding: 5px;
    position: sticky;
    top: 0;
    z-index: 1;

    .btn-group {
      border: solid 1px $textfield-bg;
      border-radius: 5px;
      width: 100%;
    }

    .clearable-text-field {
      background-color: $textfield-bg;
    }

    .clearable-text-field-clear {
      background-color: unset;
      border: unset;
    }

    .reload-button.btn {
      border-bottom-right-radius: 0.25rem;
      border-top-right-radius: 0.25rem;
    }
  }
}

.custom-fields .detail-item .detail-item-title {
  max-width: 130px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.custom-fields-input > .collapse-button {
  font-weight: 700;
}

.custom-fields-row {
  align-items: center;
  font-family: "Courier New", Courier, monospace;
  font-size: 0.875rem;

  .form-label {
    margin-bottom: 0;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: middle;
    white-space: nowrap;
  }

  // labels with titles are styled with help cursor and dotted underline elsewhere
  div.custom-fields-field label.form-label {
    cursor: inherit;
    text-decoration: inherit;
  }

  .form-control,
  .btn {
    font-size: 0.875rem;
  }

  &.custom-fields-new > div:not(:last-child) {
    padding-right: 0;
  }
}

$sidebar-width: 250px;

.sidebar-pane {
  display: flex;

  .sidebar {
    // TODO - use different colours for sidebar and toolbar
    // background-color: $textfield-bg;
    flex: $sidebar-width;
    flex-grow: 0;
    flex-shrink: 0;
    // max-height: calc(100vh - 4rem);
    // overflow-y: auto;
    padding-left: 15px;
    transition: margin-left 0.1s;
  }

  .sidebar.hide {
    margin-left: -$sidebar-width;
  }

  > :nth-child(2) {
    flex-grow: 1;
    padding-left: 15px;
    // max-height: calc(100vh - 4rem);
    // overflow-y: auto;
  }
}

.sidebar-section {
  .collapse-header {
    // background-color: $secondary;
    border-bottom: 1px solid $secondary;

    padding: 0.25rem;

    .collapse-button {
      font-weight: bold;
      text-align: left;
      width: 100%;
    }
  }

  .collapse,
  // include collapsing to allow for the transition
  .collapsing {
    padding-top: 0.25rem;
  }
}

.sidebar-section:first-child .collapse-header {
  border-top: 1px solid $secondary;
}

